crates/weaveffi-cli/tests/snapshots/node_docs_everywhere__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# docs_everywhere

Native bindings for docs_everywhere

Node.js bindings for the `docs_everywhere` native library: an ES module over a small N-API addon (`docs_everywhere_node.c`) that `npm install` compiles with node-gyp. The addon links `docs_everywhere`; set `DOCS_EVERYWHERE_LIBRARY` to the library file (or its directory) when installing, or pass `--docs_everywhere-library=<path>` to npm.

```sh
DOCS_EVERYWHERE_LIBRARY=/path/to/libdocs_everywhere.so npm install docs_everywhere
```

Each top-level module of the API is a namespace export:

```js
import { docs } from 'docs_everywhere';
```

<!-- END README.md -->
