crates/weaveffi-cli/tests/snapshots/node_docs_everywhere__binding_gyp.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from api.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate api.yml -o <out>

{
  "variables": {
    "native_dir%": "<!(node -p \"(() => { const path = require('path'); const p = process.env.DOCS_EVERYWHERE_LIBRARY || process.env.npm_config_docs_everywhere_library; if (!p) return path.resolve('.'); return require('fs').statSync(p).isFile() ? path.dirname(path.resolve(p)) : path.resolve(p); })()\")"
  },
  "targets": [
    {
      "target_name": "docs_everywhere_node",
      "sources": [
        "docs_everywhere_node.c"
      ],
      "include_dirs": [
        "."
      ],
      "library_dirs": [
        "<(native_dir)"
      ],
      "libraries": [
        "-ldocs_everywhere"
      ],
      "conditions": [
        ["OS=='mac'", { "xcode_settings": { "OTHER_LDFLAGS": ["-Wl,-rpath,@loader_path", "-Wl,-rpath,<(native_dir)"] } }],
        ["OS=='linux'", { "ldflags": ["-Wl,-rpath,'$$ORIGIN'", "-Wl,-rpath,<(native_dir)"] }]
      ]
    }
  ]
}

# END binding.gyp
