crates/weaveffi-cli/tests/snapshots/node_docs_everywhere__index_d_ts.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

/// <reference lib="esnext.disposable" />

/**
 * The root of every error these bindings throw. `code` is the ABI error
 * code: positive for a declared domain error, negative for a runtime trap
 * (-1 generic, -2 producer panic, -3 marshalling failure, -4 a callback
 * implementation failed, -5 cancelled).
 */
export declare class DocsEverywhereError extends Error {
  readonly code: number;
  constructor(code: number, message?: string);
}
/** The error a cancelled async call rejects with (code -5). */
export declare class CancelledError extends DocsEverywhereError {
  constructor(message?: string);
}
/** The root error class, under a name no namespace member can shadow. */
declare const $Error: typeof DocsEverywhereError;
/**
 * The native library's live-allocation counters (0 objects, 1 callbacks,
 * 2 iterators, 3 cancel tokens, 4 returned buffers), for leak tests.
 * @internal
 */
export declare function __debugLive(kind: number): bigint;

/**
 * Create a brand new document.
 *
 * The document starts in `Draft` status; callers must publish
 * it explicitly to make it visible.
 */
export declare namespace docs {
  /** The errors of the `docs` error domain. */
  export class DocsErrorsError extends $Error {
    constructor(code: number, message?: string);
  }
  /** Returned when no document matches the requested id */
  export class NotFoundError extends docs.DocsErrorsError {
    static readonly CODE: 1;
    constructor(message?: string);
  }
  /** Raised when attempting to move into a forbidden state */
  export class InvalidStatusError extends docs.DocsErrorsError {
    static readonly CODE: 2;
    constructor(message?: string);
  }
  /**
   * Lifecycle status of a document.
   *
   * Used to drive UI badges and filters.
   */
  export enum Status {
    /** Document is being edited */
    Draft = 0,
    /** Document is publicly visible */
    Published = 1,
    /** Document is hidden from listings */
    Archived = 2,
  }
  /**
   * Represents a single document tracked by the system.
   *
   * Documents are persisted to disk and exposed via the public API.
   */
  export interface Document {
    /** Stable opaque identifier */
    id: bigint;
    /** Human-readable title shown in lists */
    title: string;
    /** Current lifecycle status */
    status: docs.Status;
    /** Free-form tags for grouping */
    tags: string[];
  }
  /**
   * Consumer-implemented observer of document-saved notifications.
   *
   * Implementations must be safe to call from any thread.
   */
  export interface SavedListener {
    /**
     * Fires after a document has been persisted successfully
     * @param docId Identifier of the saved document
     * @param revision Monotonically increasing revision
     */
    onSaved(docId: bigint, revision: number): void;
  }
  /**
   * An ordered collection of documents.
   *
   * Notebooks own their documents and release them when destroyed.
   */
  export class Notebook {
    /** Create an empty notebook */
    constructor();
    /**
     * Add a document, returning its position in the notebook
     * @param document The document to add
     */
    insert(document: docs.Document): number;
    /**
     * Look up a document by identifier, failing when none matches
     * @param id Identifier of the document to find
     * @throws {docs.DocsErrorsError}
     */
    find(id: bigint): docs.Document;
    /** The number of documents currently held */
    size(): number;
    /** The largest number of documents one notebook will hold */
    static maxDocuments(): number;
    /**
     * Release this wrapper's reference to the native object. Safe to call
     * more than once; a wrapper that is never closed is released when it is
     * garbage collected. Using the wrapper after `close()` throws.
     */
    close(): void;
    /** Alias of `close()` for `using` declarations. */
    [Symbol.dispose](): void;
  }
  /**
   * Create a brand new document.
   *
   * The document starts in `Draft` status; callers must publish
   * it explicitly to make it visible.
   * @param title Human-readable title for the new document
   * @param tags Initial set of tags (may be empty)
   */
  export function createDocument(title: string, tags: string[]): docs.Document;
  /**
   * Look up a document by identifier
   * @param id Identifier returned from create_document
   */
  export function getDocument(id: bigint): docs.Document | null;
  /**
   * Publish a document in the background
   * @param id Identifier of the document to publish
   */
  export function publishAsync(id: bigint): Promise<boolean>;
  /**
   * Register a listener for saved notifications
   * @param listener Receiver of saved notifications
   */
  export function watch(listener: docs.SavedListener): void;
}

// END index.d.ts
