crates/weaveffi-cli/tests/snapshots/node_docs_everywhere__index_js.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

import {
  $Fault,
  $fault,
  $domain,
  $W,
  $R,
  $encode,
  $decode,
  $Object,
  $own,
  $adopt,
  $adoptOpt,
  $lend,
  $lendOpt,
  $unlend,
  $clone,
  $Iterator,
  $cancellable,
  $impl,
  $ret,
  $verify,
  DocsEverywhereError as $Error,
} from './runtime.js';
export { DocsEverywhereError, CancelledError } from './runtime.js';

import { createRequire } from 'node:module';

// The native entry points: the N-API addon `npm install` builds from
// docs_everywhere_node.c (with node-gyp), or a prebuilt copy next to this file.
function $loadAddon(name) {
  const require = createRequire(import.meta.url);
  const tried = [];
  for (const dir of ['./build/Release/', './build/Debug/', './']) {
    try {
      return require(dir + name);
    } catch (e) {
      if (e.code !== 'MODULE_NOT_FOUND') throw e;
      tried.push(dir + name);
    }
  }
  throw new Error(
    `the native addon ${name} was not found (tried ${tried.join(', ')}); ` +
      'build it with `npm install` or `node-gyp rebuild` in this package',
  );
}

const $raw = $loadAddon('docs_everywhere_node.node');
$raw.$setup($Fault);

// Object tokens in value buffers are already bigint handles here.
const $token = (t) => t;

$verify($raw, 'docs_everywhere', 'docs_everywhere', 3, [['docs', 0x7950eec1e9cfc819n]]);

/**
 * The native library's live-allocation counters (0 objects, 1 callbacks,
 * 2 iterators, 3 cancel tokens, 4 returned buffers), for leak tests. Always
 * zero unless the library enables its `leak-check` feature.
 */
export function __debugLive(kind) {
  return $raw.docs_everywhere_debug_live(kind);
}

const docs$DocsErrorsError = class DocsErrorsError extends $Error {};
const docs$NotFoundError = class NotFoundError extends docs$DocsErrorsError {
  static CODE = 1;
  constructor(message = 'Document not found') {
    super(1, message);
  }
};
const docs$InvalidStatusError = class InvalidStatusError extends docs$DocsErrorsError {
  static CODE = 2;
  constructor(message = 'Invalid status transition') {
    super(2, message);
  }
};
const $codes$docs$DocsErrors = new Map([[1, docs$NotFoundError], [2, docs$InvalidStatusError]]);
function $from$docs$DocsErrors(e) {
  return $domain(e, $codes$docs$DocsErrors);
}

const docs$Status = Object.freeze({
  Draft: 0,
  Published: 1,
  Archived: 2,
  0: 'Draft',
  1: 'Published',
  2: 'Archived',
});

function $w$docs$Document(w, v) {
  w.writeI64(v.id);
  w.writeString(v.title);
  w.writeI32(v.status);
  w.writeList(v.tags, $W.String);
}
function $r$docs$Document(r) {
  return {
    id: r.readI64(),
    title: r.readString(),
    status: r.readI32(),
    tags: r.readList($R.String),
  };
}

function $adapt$docs$SavedListener(impl) {
  $impl(impl, 'SavedListener');
  return {
    on_saved($a0, $a1) {
      impl.onSaved($a0, $a1);
    },
  };
}

const docs$Notebook = class Notebook extends $Object {
  constructor() {
    super();
    try {
      $own(this, $raw.docs_everywhere_docs_Notebook_new());
    } catch ($e) {
      throw $fault($e);
    }
  }
  static $destroy(h) {
    $raw.docs_everywhere_docs_Notebook_destroy(h);
  }
  static $clone(h) {
    return $raw.docs_everywhere_docs_Notebook_clone(h);
  }
  insert(document) {
    const $self = $lend(this, docs$Notebook);
    try {
      return $raw.docs_everywhere_docs_Notebook_insert($self, $encode(document, $w$docs$Document));
    } catch ($e) {
      throw $fault($e);
    } finally {
      $unlend(this);
    }
  }
  find(id) {
    const $self = $lend(this, docs$Notebook);
    try {
      return $decode($raw.docs_everywhere_docs_Notebook_find($self, id), $r$docs$Document);
    } catch ($e) {
      throw $from$docs$DocsErrors($e);
    } finally {
      $unlend(this);
    }
  }
  size() {
    const $self = $lend(this, docs$Notebook);
    try {
      return $raw.docs_everywhere_docs_Notebook_size($self);
    } catch ($e) {
      throw $fault($e);
    } finally {
      $unlend(this);
    }
  }
  static maxDocuments() {
    try {
      return $raw.docs_everywhere_docs_Notebook_max_documents();
    } catch ($e) {
      throw $fault($e);
    }
  }
};

const docs$createDocument = function createDocument(title, tags) {
  try {
    return $decode($raw.docs_everywhere_docs_create_document(title, $encode(tags, (w, v) => w.writeList(v, $W.String))), $r$docs$Document);
  } catch ($e) {
    throw $fault($e);
  }
};

const docs$getDocument = function getDocument(id) {
  try {
    return $decode($raw.docs_everywhere_docs_get_document(id), (r) => r.readOpt($r$docs$Document));
  } catch ($e) {
    throw $fault($e);
  }
};

const docs$publishAsync = async function publishAsync(id) {
  try {
    return await $raw.docs_everywhere_docs_publish_async(id);
  } catch ($e) {
    throw $fault($e);
  }
};

const docs$watch = function watch(listener) {
  try {
    $raw.docs_everywhere_docs_watch($adapt$docs$SavedListener(listener));
  } catch ($e) {
    throw $fault($e);
  }
};

export const docs = Object.freeze({
  DocsErrorsError: docs$DocsErrorsError,
  NotFoundError: docs$NotFoundError,
  InvalidStatusError: docs$InvalidStatusError,
  Status: docs$Status,
  Notebook: docs$Notebook,
  createDocument: docs$createDocument,
  getDocument: docs$getDocument,
  publishAsync: docs$publishAsync,
  watch: docs$watch,
});

// END index.js
