crates/weaveffi-cli/tests/snapshots/node_docs_everywhere__package_json.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
{
  "//": "Generated by WeaveFFI [VERSION] from api.yml",
  "//warning": "DO NOT EDIT. Your changes will be overwritten.",
  "//regenerate": "To regenerate: weaveffi generate api.yml -o <out>",
  "name": "docs_everywhere",
  "version": "0.1.0",
  "description": "Native bindings for docs_everywhere",
  "type": "module",
  "main": "index.js",
  "types": "index.d.ts",
  "exports": {
    ".": {
      "types": "./index.d.ts",
      "default": "./index.js"
    }
  },
  "files": [
    "index.js",
    "index.d.ts",
    "runtime.js",
    "binding.gyp",
    "docs_everywhere_node.c",
    "docs_everywhere.h"
  ],
  "gypfile": true,
  "scripts": {
    "install": "node-gyp rebuild"
  },
  "engines": {
    "node": ">=18"
  }
}
