crates/weaveffi-cli/tests/snapshots/node_docs_everywhere__types_d_ts.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from weaveffi.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate weaveffi.yml -o <out>

// Generated types for WeaveFFI functions
/**
 * Base class of every error thrown by these bindings. Non-throwing
 * functions reject or throw it directly for panics and marshalling
 * failures; throwing functions surface a module domain subclass.
 */
export class WeaveFFIError extends Error {
  /** The numeric ABI error code. */
  code: number;
  /** The raw producer message, without the code prefix. */
  errorMessage: string;
  constructor(code: number, message: string);
}
/** Typed errors reported by the `docs` module's throwing functions. */
export class DocsErrorsError extends WeaveFFIError {
  constructor(code: number, message: string);
}
/** Returned when no document matches the requested id */
export class NotFoundError extends DocsErrorsError {
  static readonly CODE: 1;
  constructor(message?: string);
}
/** Raised when attempting to move into a forbidden state */
export class InvalidStatusError extends DocsErrorsError {
  static readonly CODE: 2;
  constructor(message?: string);
}
/**
 * Represents a single document tracked by the system.
 *
 * Documents are persisted to disk and exposed via the public API.
 */
export interface Document {
  /** Stable opaque identifier */
  id: number;
  /** Human-readable title shown in lists */
  title: string;
  /** Current lifecycle status */
  status: Status;
  /** Free-form tags for grouping */
  tags: string[];
}
/**
 * Lifecycle status of a document.
 *
 * Used to drive UI badges and filters.
 */
export enum Status {
  /** Document is being edited */
  Draft = 0,
  /** Document is publicly visible */
  Published = 1,
  /** Document is hidden from listings */
  Archived = 2,
}
// module docs
/**
 * An ordered collection of documents.
 *
 * Notebooks own their documents and release them when destroyed.
 */
export class Notebook {
  /**
   * Create an empty notebook
   * Maps to C function: weaveffi_docs_Notebook_new
   */
  constructor();
  /**
   * Add a document, returning its position in the notebook
   * @param document The document to add
   * Maps to C function: weaveffi_docs_Notebook_insert
   */
  insert(document: Document): number;
  /**
   * Look up a document by identifier, failing when none matches
   * @param id Identifier of the document to find
   * Maps to C function: weaveffi_docs_Notebook_find
   * @throws {DocsErrorsError}
   */
  find(id: number): Document;
  /**
   * The number of documents currently held
   * Maps to C function: weaveffi_docs_Notebook_size
   */
  size(): number;
  /**
   * The largest number of documents one notebook will hold
   * Maps to C function: weaveffi_docs_Notebook_max_documents
   */
  static maxDocuments(): number;
  /** Free the underlying native object. */
  destroy(): void;
}
/** Subscribe to document-saved notifications */
export function registerSavedListener(callback: (docId: number, revision: number) => void): number
export function unregisterSavedListener(id: number): void
/**
 * Create a brand new document.
 *
 * The document starts in `Draft` status; callers must publish
 * it explicitly to make it visible.
 * @param title Human-readable title for the new document
 * @param tags Initial set of tags (may be empty)
 * Maps to C function: weaveffi_docs_create_document
 */
export function createDocument(title: string, tags: string[]): Document
/**
 * Look up a document by identifier
 * @param id Identifier returned from create_document
 * Maps to C function: weaveffi_docs_get_document
 */
export function getDocument(id: number): Document | null
/**
 * Publish a document in the background
 * @param id Identifier of the document to publish
 * Maps to C function: weaveffi_docs_publish_async
 */
export function publishAsync(id: number): Promise<boolean>

// END types.d.ts
